fix: lint errors

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   <!-- FAQs -->
 
-  <div class="faqa">
+  <div class="faq">
     <div class="faq-container">
       <div class="faq-text-container">
         <h2>FAQ</h2>
@@ -183,69 +183,69 @@
       </div>
       <div class="faq-card-container">
         <div class="faq-cards-row">
-          <div class="faq-card">
+          <div class="faq-card-1">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-1">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
           </div>
-          <div class="faq-card">
+          <div class="faq-card-2">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-2">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
           </div>
-          <div class="faq-card">
+          <div class="faq-card-3">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
-              <h5>the quick fox jumps over the lazy dog</h5>
-              <h6>Things on a very small scale behave like nothing</h6>
-            </div>
-          </div>
-        </div>
-        <div class="faq-cards-row">
-          <div class="faq-card">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
-              <h5>the quick fox jumps over the lazy dog</h5>
-              <h6>Things on a very small scale behave like nothing</h6>
-            </div>
-          </div>
-          <div class="faq-card">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
-              <h5>the quick fox jumps over the lazy dog</h5>
-              <h6>Things on a very small scale behave like nothing</h6>
-            </div>
-          </div>
-          <div class="faq-card">
-            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-3">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
           </div>
         </div>
         <div class="faq-cards-row">
-          <div class="faq-card">
+          <div class="faq-card-4">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-4">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
           </div>
-          <div class="faq-card">
+          <div class="faq-card-5">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-5">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
           </div>
-          <div class="faq-card">
+          <div class="faq-card-6">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
-            <div class="faq-card-text">
+            <div class="faq-card-text-6">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+        </div>
+        <div class="faq-cards-row">
+          <div class="faq-card-7">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text-7">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card-8">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text-8">
+              <h5>the quick fox jumps over the lazy dog</h5>
+              <h6>Things on a very small scale behave like nothing</h6>
+            </div>
+          </div>
+          <div class="faq-card-9">
+            <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
+            <div class="faq-card-text-9">
               <h5>the quick fox jumps over the lazy dog</h5>
               <h6>Things on a very small scale behave like nothing</h6>
             </div>
