fix: lint errors

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </p>
       </div>
       <div class="faq-card-container">
-        <div class="faq-cards-row">
+        <div class="faq-cards-row-1">
           <div class="faq-card-1">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
             <div class="faq-card-text-1">
@@ -205,7 +205,7 @@
             </div>
           </div>
         </div>
-        <div class="faq-cards-row">
+        <div class="faq-cards-row-2">
           <div class="faq-card-4">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
             <div class="faq-card-text-4">
@@ -228,7 +228,7 @@
             </div>
           </div>
         </div>
-        <div class="faq-cards-row">
+        <div class="faq-cards-row-3">
           <div class="faq-card-7">
             <img src="assets/images/icn arrow-right icn-xs.svg" alt="">
             <div class="faq-card-text-7">
@@ -277,23 +277,23 @@
             </div>
           </div>
           <div class="features-list">
-            <div class="feature-item">
+            <div class="feature-item-1">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-2">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-3">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-4">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>1GB Cloud storage</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-5">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>Email and community support</h6>
             </div>
@@ -311,23 +311,23 @@
             </div>
           </div>
           <div class="features-list">
-            <div class="feature-item item-standard">
+            <div class="feature-item-6 item-standard">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6 class="text">Unlimited product updates</h6>
             </div>
-            <div class="feature-item item-standard">
+            <div class="feature-item-7 item-standard">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item item-standard">
+            <div class="feature-item-8 item-standard">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item item-standard">
+            <div class="feature-item-9 item-standard">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>1GB Cloud storage</h6>
             </div>
-            <div class="feature-item item-standard">
+            <div class="feature-item-10 item-standard">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>Email and community support</h6>
             </div>
@@ -345,23 +345,23 @@
             </div>
           </div>
           <div class="features-list">
-            <div class="feature-item">
+            <div class="feature-item-11">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-12">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-13">
               <img src="assets/images/icn-circle circle-xs secondary-color-1.svg" alt="">
               <h6>Unlimited product updates</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-14">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>1GB Cloud storage</h6>
             </div>
-            <div class="feature-item">
+            <div class="feature-item-15">
               <img src="assets/images/icn-circle circle-xs mute.svg" alt="">
               <h6>Email and community support</h6>
             </div>
