fix: lint errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h4>
             We know how large objects will act, but things on a small scale
           </h4>
-          <div class="cta">
+          <div class="cta-1">
             <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
             <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
           </div>
@@ -132,7 +132,7 @@
           </div>
         </div>
       </div>
-      <div class="cta">
+      <div class="cta-2">
         <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
         <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
       </div>
