fix: lint errors

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             We know how large objects will act, but things on a small scale
           </h4>
           <div class="cta-1">
-            <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
-            <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
+            <button class="btn-1 btn-round-1"><span class="btn-text">Get Quote Now</span></button>
+            <button class="btn-2 btn-round-2 btn-outline"><span class="btn-text">Learn More</span></button>
           </div>
         </div>
         <div class="image">
@@ -133,8 +133,8 @@
         </div>
       </div>
       <div class="cta-2">
-        <button class="btn btn-round"><span class="btn-text">Get Quote Now</span></button>
-        <button class="btn btn-round btn-outline"><span class="btn-text">Learn More</span></button>
+        <button class="btn-3 btn-round-3"><span class="btn-text">Get Quote Now</span></button>
+        <button class="btn-4 btn-round-4 btn-outline"><span class="btn-text">Learn More</span></button>
       </div>
     </div>
   </div>
